src/objects/Attendee__c.object
<CustomObject>
    <fields>
        <fullName>AttendeeName__c</fullName>
        <formula>Engagement__r.Contact__r.FirstName &amp; &quot; &quot; &amp; Engagement__r.Contact__r.LastName</formula>
        <label>Attendee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.Type__c</field>
                <operation>equals</operation>
                <value>Student</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Attendees (Contact)</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Engagement__c</fullName>
        <label>Engagement</label>
        <referenceTo>Engagement__c</referenceTo>
        <relationshipLabel>Attendances</relationshipLabel>
        <relationshipName>Attendances</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GetFurther_Session__c</fullName>
        <label>Session</label>
        <referenceTo>GetFurther_Session__c</referenceTo>
        <relationshipLabel>Attendances</relationshipLabel>
        <relationshipName>Attendances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Skills to Practise Further</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RegisterName__c</fullName>
        <description>Used by the register, to show Attendance type (tutor/student)</description>
        <formula>TEXT(Type__c) &amp;&quot;: &quot;&amp; AttendeeName__c</formula>
        <label>Register Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SessionStartTime__c</fullName>
        <formula>GetFurther_Session__r.Session_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SessionStartTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Student_Attendance</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>StudentDidWell__c</fullName>
        <label>Demonstrated academic progress</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Study_Supporter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The student has nominated the study support contact to be their study supporter</description>
        <label>Study Supporter</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Type__c</field>
                <operation>equals</operation>
                <value>Study Supporter</value>
            </filterItems>
            <filterItems>
                <field>Contact.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Attendees1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GCSE - Negative numbers</fullName>
                </value>
                <value>
                    <fullName>GCSE - Converting between fractions, decimals and percentages</fullName>
                </value>
                <value>
                    <fullName>GCSE - Ordering fractions, decimals and percentages</fullName>
                </value>
                <value>
                    <fullName>GCSE - Calculating with fractions - part 1</fullName>
                </value>
                <value>
                    <fullName>GCSE - Calculating with fractions - part 2</fullName>
                </value>
                <value>
                    <fullName>GCSE - Substitution</fullName>
                </value>
                <value>
                    <fullName>GCSE - Indices</fullName>
                </value>
                <value>
                    <fullName>GCSE - Order of operations</fullName>
                </value>
                <value>
                    <fullName>GCSE - Finding the area of common shapes</fullName>
                </value>
                <value>
                    <fullName>GCSE - Finding the area of compound shapes</fullName>
                </value>
                <value>
                    <fullName>GCSE - Solving one-step and two-step equations</fullName>
                </value>
                <value>
                    <fullName>GCSE - Expanding brackets and solving two-step equations with brackets</fullName>
                </value>
                <value>
                    <fullName>GCSE - Solving equations with unknowns on both sides</fullName>
                </value>
                <value>
                    <fullName>GCSE - Calculating the midpoint and gradient between two points</fullName>
                </value>
                <value>
                    <fullName>GCSE - Calculating equations of straight-line graphs</fullName>
                </value>
                <value>
                    <fullName>GCSE - Percentages of amounts</fullName>
                </value>
                <value>
                    <fullName>GCSE - Percentage increase and decrease</fullName>
                </value>
                <value>
                    <fullName>GCSE - Percentage change</fullName>
                </value>
                <value>
                    <fullName>GCSE - Compound interest and simple interest</fullName>
                </value>
                <value>
                    <fullName>GCSE - Sharing into ratio</fullName>
                </value>
                <value>
                    <fullName>GCSE - Solving problems using ratio</fullName>
                </value>
                <value>
                    <fullName>GCSE - Finding fractions and percentages from ratio</fullName>
                </value>
                <value>
                    <fullName>GCSE - Solving word problems involving fractions, percentages and ratio</fullName>
                </value>
                <value>
                    <fullName>GCSE - Fractions, percentages and ratio</fullName>
                </value>
                <value>
                    <fullName>GCSE - Finding the perimeter and circumference</fullName>
                </value>
                <value>
                    <fullName>GCSE - Finding a length or area, when you know the perimeter</fullName>
                </value>
                <value>
                    <fullName>GCSE - Finding angles in triangles and quadrilaterals</fullName>
                </value>
                <value>
                    <fullName>GCSE - Angles in parallel lines</fullName>
                </value>
                <value>
                    <fullName>GCSE - Using a combination of angle facts</fullName>
                </value>
                <value>
                    <fullName>GCSE - Averages and spread</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tutor</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Attendance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>GetFurther_Session__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Attendee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>